Fix z-index issue with result list

--- a/docs/style.css
+++ b/docs/style.css
@@ -40,6 +40,7 @@ tick-routes { display: block;margin-top: 1rem; }
     left: 10%;
     width: 80%;
     background-color: #333;
+    z-index: 1;
 }
 input.search { width: 50%; }
 .route {
